--- a/WT_index.html
+++ b/WT_index.html
@@ -7,7 +7,7 @@
    
     <h2 style="text-align: center;" > 18ITL52 WEB TECHNOLOGY LABORATORY</h2>
 
-   <h3 style="text-align: center;">NAME: Ponnazhagan</h3>
+   <h3 style="text-align: center;">NAME: Ponnazhagan N A</h3>
    <h3 style="text-align: center;">ROLLNO:19ITR058</h3>
    <h3 style="text-align: center;">PROGRAM:B.TECH</h3>
    <h3 style="text-align: center;">BRANCH:INFORMATION TECHNOLOGY</h3>
