--- a/WT_index.html
+++ b/WT_index.html
@@ -2,7 +2,7 @@
 <html>
 
 
-<body style="background-color:AliceBlue;">
+<body style="background-color:LightBlue;">
     
    
     <h2 style="text-align: center;" > 18ITL52 WEB TECHNOLOGY LABORATORY</h2>
