--- a/WT_index.html
+++ b/WT_index.html
@@ -29,7 +29,7 @@
 
             </td>
             <td> Design a web page using HTML tags and host it in githubrepository.</td>
-            <td> <a href="mpty"target="blank"> link</a></td>
+            <td> <a href="https://ponnazhagan.github.io/WT_lab/resume.html"target="blank"> link</a></td>
         </tr>
        
     </table>
