--- a/WT_index.html
+++ b/WT_index.html
@@ -31,6 +31,14 @@
             <td> Design a web page using HTML tags and host it in githubrepository.</td>
             <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex1/resume.html"target="blank"> link</a></td>
         </tr>
+         <tr>
+            <td>
+                2.
+
+            </td>
+            <td> Create a form using html tags for "participation details"</td>
+            <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex2/participation.html"target="blank"> link</a></td>
+        </tr>
        
     </table>
 </body>
