--- a/WT_index.html
+++ b/WT_index.html
@@ -39,6 +39,14 @@
             <td> Create a form using html tags for "participation details"</td>
             <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex2/participation.html"target="blank"> link</a></td>
         </tr>
+         <tr>
+            <td>
+                3.
+
+            </td>
+            <td> Create a form using html tags for "participation details"</td>
+            <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex3/xioami_web.html"target="blank"> link</a></td>
+        </tr>
        
     </table>
 </body>
