--- a/Ex3/redmi.htm
+++ b/Ex3/redmi.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>xiaomi | Mi India</title>
+<title>Redmi Phones | xiaomi | Mi India</title>
 <link rel="stylesheet" type="text/css" href="redmi.css">
 
 </head>
