--- a/Ex3/contact.htm
+++ b/Ex3/contact.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>xiaomi | Mi India</title>
+<title>Contact | xiaomi | Mi India</title>
 <link rel="stylesheet" type="text/css" href="contact.css">
 
 </head>
