--- a/WT_index.html
+++ b/WT_index.html
@@ -36,7 +36,7 @@
                 2.
 
             </td>
-            <td> Create a form using html tags for "participation details"</td>
+            <td> Create a form using html tags for "participation details".</td>
             <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex2/participation.html"target="blank"> link</a></td>
         </tr>
          <tr>
@@ -44,7 +44,7 @@
                 3.
 
             </td>
-            <td> Create a form using html tags for "participation details"</td>
+            <td> Create a attractive website using html and CSS. </td>
             <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex3/xioami_web.html"target="blank"> link</a></td>
         </tr>
        
