--- a/Ex3/redmi.htm
+++ b/Ex3/redmi.htm
@@ -30,7 +30,7 @@
   </div>
 
 
-  <a href="" ><img  class="image"  src="11lite.jpg" ></a>
+  <a href="https://www.mi.com/in/mi-11-lite/" ><img  class="image"  src="11lite.jpg" ></a>
   <h1 class="heading">~~~~~~~~~ xiaomi Phones ~~~~~~~~~</h1>
   <br>
 
