--- a/Ex4/index.htm
+++ b/Ex4/index.htm
@@ -10,7 +10,7 @@
 <body>
 
   <nav id="backimg" class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"><img src="KTM_logo.jpg" width="100px" height="80px"></a>       
+    <a class="navbar-brand" href="#"><img src="KTM_Logo.jpg" width="100px" height="80px"></a>       
     <div  class="container-fluid ">      
     
 
