--- a/WT_index.html
+++ b/WT_index.html
@@ -55,6 +55,15 @@
             <td> Create a attractive website using html and Bootstrap</td>
             <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex4/index.htm" target="blank"> link</a></td>
         </tr>
+        
+        <tr>
+            <td>
+                5.
+
+            </td>
+            <td>  Cgpa calculator using javascript</td>
+            <td> <a href="https://ponnazhagan.github.io/WT_lab/Ex5/cgpacalculator.htm" target="blank"> link</a></td>
+        </tr>
        
     </table>
 </body>
