--- a/Ex5/cgpacalculator.htm
+++ b/Ex5/cgpacalculator.htm
@@ -163,7 +163,7 @@ function reset() {
 
    if(k < last){
    
-     document.getElementById("enter").innerHTML = "semester"+ (k+1);
+     document.getElementById("enter").innerHTML = "Semester "+ (k+1);
      
      for(let i=1;i<=10;i++){
        let product,credit;  
