--- a/Ex1/resume.html
+++ b/Ex1/resume.html
@@ -63,6 +63,13 @@ height="150px" alt="adventure">
        <li>mobile games on most of my free time</li>
        <li>watching movies</li>
 </ul>
+<h2>Hobbies:</h2>
+<ul type="square">
+       <li>reading newspaper</li>
+       <li>playing cricket</li>
+       <li>mobile games on most of my free time</li>
+       <li>watching movies</li>
+</ul>
 <center><i>Thank you</i><center>
 
 
